--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -26,6 +26,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Config 파일을 로드\n",
+    "config_path = \"./config/preprocessing_config.yaml\"\n",
+    "config = load_config(config_path)\n",
+    "\n",
+    "original_video_folder = config[\"general\"][\"video_folder\"]\n",
+    "\n",
+    "preprocessed_video_folder = config[\"scene_caption\"][\"fps_adjusted_video_folder\"]\n",
+    "timestamp_file = config[\"scene_caption\"][\"timestamp_file\"]\n",
+    "scene_folder = config[\"scene_caption\"][\"scene_folder\"]\n",
+    "mono_audio_folder = config[\"scene_caption\"][\"audio\"][\"mono_audio_folder\"]\n",
+    "\n",
+    "key_frames_folder = config[\"frame_caption\"][\"key_frames_folder\"]\n",
+    "\n",
+    "video_files = [f for f in os.listdir(preprocessed_video_folder) if f.endswith(\".mp4\")]\n",
+    "\n",
+    "print(f\"[INFO] Configuration loaded successfully.\")\n",
+    "print(f\"[INFO] Found {len(video_files)} video files in the input directory.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -61,8 +86,8 @@
     }
    ],
    "source": [
-    "video_directory = \"./video\"\n",
-    "get_video_info(video_directory)"
+    "# 원본 비디오 파일의 정보를 출력\n",
+    "get_video_info(original_video_folder)"
    ]
   },
   {
@@ -101,9 +126,7 @@
    ],
    "source": [
     "# FPS를 조정하여 preprocessed_video 폴더에 저장\n",
-    "preprocessed_video_folder = \"./video\"\n",
-    "scene_folder = \"./preprocessed_video\"\n",
-    "change_fps(preprocessed_video_folder, scene_folder)"
+    "change_fps(original_video_folder, preprocessed_video_folder)"
    ]
   },
   {
@@ -144,39 +167,7 @@
    ],
    "source": [
     "# FPS 조정된 비디오의 정보를 출력 (프레임 수 동일)\n",
-    "video_directory = \"./preprocessed_video\"\n",
-    "get_video_info(video_directory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Configuration loaded successfully.\n",
-      "[INFO] Found 22 video files in the input directory.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Config 파일을 로드\n",
-    "config_path = \"./config/preprocessing_config.yaml\"\n",
-    "config = load_config(config_path)\n",
-    "\n",
-    "preprocessed_video_folder = config[\"extract_frames\"][\"video_folder\"]\n",
-    "timestamp_file = config[\"extract_scenes\"][\"timestamp_file\"]\n",
-    "scene_folder = config[\"extract_scenes\"][\"scene_folder\"]\n",
-    "mono_audio_folder = config[\"audio\"][\"mono_audio_folder\"]\n",
-    "key_frames_folder = config[\"extract_frames\"][\"key_frames_folder\"]\n",
-    "\n",
-    "video_files = [f for f in os.listdir(preprocessed_video_folder) if f.endswith(\".mp4\")]\n",
-    "\n",
-    "print(f\"[INFO] Configuration loaded successfully.\")\n",
-    "print(f\"[INFO] Found {len(video_files)} video files in the input directory.\")"
+    "get_video_info(preprocessed_video_folder)"
    ]
   },
   {
@@ -211,8 +202,8 @@
     "save_timestamps_to_txt(\n",
     "    preprocessed_video_folder,\n",
     "    timestamp_file,\n",
-    "    threshold=config[\"extract_scenes\"][\"threshold\"],\n",
-    "    min_scene_len=config[\"extract_scenes\"][\"min_scene_len\"]\n",
+    "    threshold=config[\"scene_caption\"][\"PySceneDetect_threshold\"],\n",
+    "    min_scene_len=config[\"scene_caption\"][\"PySceneDetect_min_scene_len\"]\n",
     ")\n",
     "\n",
     "print(f\"[INFO] Scene timestamps have been saved to {timestamp_file}\")"
@@ -329,10 +320,10 @@
    "source": [
     "# mono_audio_folder에 저장된 모든 Scene의 오디오를 텍스트로 변환하여 Scene 정보 JSON 파일로 저장\n",
     "transcribe_and_save_scene_information_into_json(\n",
-    "    mono_audio_folder, config['audio']['scene_info_json_file'], timestamp_file\n",
+    "    mono_audio_folder, config['scene_caption']['audio']['scene_info_with_audio_scripts_file'], timestamp_file\n",
     ")\n",
     "\n",
-    "print(f\"[INFO] Successfully transcribed and saved to {config['audio']['scene_info_json_file']}\")"
+    "print(f\"[INFO] Successfully transcribed and saved to {config['scene_caption']['audio']['scene_info_with_audio_scripts_file']}\")"
    ]
   },
   {
